Argo-rollout/istio-virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: banka-app
  namespace: default
spec:
  hosts:
    - "banka.com"  
  gateways:
    - banka-app-gateway
  http:
    - name: "bluegreen-routing"
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: banka-app-active
            subset: blue
          weight: 50
        - destination:
            host: banka-app-preview
            subset: green
          weight: 50
